
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.41.0]]
== 0.41.0 (TBD)

CAUTION: Reworked OAuth2 / OIDC support

[quote]
____

The `security.oauth2` configuration section was removed. Instead the `security.publicKeysPath` property was added.

In order to provide support for more authentication providers it is now possible to specify the path to a file which contains the public keys in the configuration. These keys will be used to validate the access tokens.

You can read more about how to setup OAuth2 / OIDC in the link:{{< relref "authentication.asciidoc" >}}#_oauth2_oidc[OAuth2 / OIDC] guide.

It is now also possible for Authentication Service Plugins to provide Json Web Keys (JWK) to Gentics Mesh. Plugins can load the accepted JWK's from the authentication provider server and return it to Gentics Mesh. A plugin has to implement the `getPublicKeys()` method to support this.

Plugins can now implement the `extractUsername()` method to return the username that should be used to handle mappings between Mesh and JWT.
____


[[v0.40.3]]
== 0.40.3 (13.09.2019)

icon:plus[] Java Rest Client: Various new methods have been added to handle endpoint agnostic requests (`get(), post(), delete(), put()`). These methods can be used to handle plugin requests.

icon:check[] Migration: It is now possible to apply schema / microschema changes that include the `name` property via the `changes` endpoint. Previously the name property was not utilized.

[[v0.40.2]]
== 0.40.2 (09.09.2019)

icon:plus[] Core: It is now possible to configure the transaction retry limit using the `MESH_GRAPH_TX_RETRY_LIMIT` environment variable or the `storage.txRetryLimit` parameter.

icon:check[] Core: The default value for `storage.synchronizeWrites` has been changed to `true`.
