@@ -38,7 +38,6 @@ import com.gentics.mesh.json.JsonUtil;
 import com.gentics.mesh.madl.traversal.TraversalResult;
 import com.gentics.mesh.parameter.GenericParameters;
 import com.gentics.mesh.parameter.value.FieldsSet;
-import com.gentics.mesh.util.ETag;
 import com.syncleus.ferma.VertexFrame;
 
 import io.reactivex.Single;
@@ -133,8 +132,8 @@ public class MicroschemaContainerVersionImpl extends
 	}
 
 	@Override
-	public String getETag(InternalActionContext ac) {
-		return ETag.hash(getUuid());
+	public String getSubETag(InternalActionContext ac) {
+		return "";
 	}
 
 	@Override
