@@ -4,6 +4,8 @@ import static com.gentics.mesh.core.data.relationship.GraphPermission.READ_PERM;
 import static com.gentics.mesh.core.rest.MeshEvent.ROLE_PERMISSIONS_CHANGED;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 import com.gentics.mesh.context.InternalActionContext;
@@ -27,7 +29,9 @@ import com.gentics.mesh.core.rest.event.impl.MeshElementEventModelImpl;
 import com.gentics.mesh.core.rest.event.role.PermissionChangedEventModelImpl;
 import com.gentics.mesh.core.rest.event.role.PermissionChangedProjectElementEventModel;
 import com.gentics.mesh.madl.traversal.TraversalResult;
+import com.gentics.mesh.parameter.GenericParameters;
 import com.gentics.mesh.parameter.value.FieldsSet;
+import com.gentics.mesh.util.ETag;
 
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
@@ -162,13 +166,49 @@ public abstract class AbstractMeshCoreVertex<T extends RestModel, R extends Mesh
 	}
 
 	@Override
-	public String getETag(InternalActionContext ac) {
+	public final String getETag(InternalActionContext ac) {
 		StringBuilder keyBuilder = new StringBuilder();
 		keyBuilder.append(getUuid());
 		keyBuilder.append("-");
 		keyBuilder.append(ac.getUser().getPermissionInfo(this).getHash());
-		return keyBuilder.toString();
+
+		keyBuilder.append("fields:");
+		GenericParameters generic = ac.getGenericParameters();
+		FieldsSet fields = generic.getFields();
+		fields.forEach(keyBuilder::append);
+
+		/**
+		 * permissions (&roleUuid query parameter aware)
+		 * 
+		 * Permissions can change and thus must be included in the etag computation in order to invalidate the etag once the permissions change.
+		 */
+		String roleUuid = ac.getRolePermissionParameters().getRoleUuid();
+		if (!isEmpty(roleUuid)) {
+			Role role = mesh().boot().meshRoot().getRoleRoot().loadObjectByUuid(ac, roleUuid, READ_PERM);
+			if (role != null) {
+				Set<GraphPermission> permSet = role.getPermissions(this);
+				Set<String> humanNames = new HashSet<>();
+				for (GraphPermission permission : permSet) {
+					humanNames.add(permission.getRestPerm().getName());
+				}
+				String[] names = humanNames.toArray(new String[humanNames.size()]);
+				keyBuilder.append(Arrays.toString(names));
+			}
+
+		}
+
+		// Add the type specific etag part
+		keyBuilder.append(getSubETag(ac));
+		return ETag.hash(keyBuilder.toString());
 	}
+
+	/**
+	 * This method provides the element specific etag. It needs to be individually implemented for all core element classes.
+	 *   
+	 * @param ac
+	 * @return
+	 */
+	public abstract String getSubETag(InternalActionContext ac);
 
 	@Override
 	public PermissionChangedEventModelImpl onPermissionChanged(Role role) {
