@@ -47,7 +47,6 @@ import com.gentics.mesh.event.EventQueueBatch;
 import com.gentics.mesh.parameter.GenericParameters;
 import com.gentics.mesh.parameter.PagingParameters;
 import com.gentics.mesh.parameter.value.FieldsSet;
-import com.gentics.mesh.util.ETag;
 import com.syncleus.ferma.traversals.VertexTraversal;
 
 import io.reactivex.Single;
@@ -227,11 +226,10 @@ public class TagFamilyImpl extends AbstractMeshCoreVertex<TagFamilyResponse, Tag
 	}
 
 	@Override
-	public String getETag(InternalActionContext ac) {
+	public String getSubETag(InternalActionContext ac) {
 		StringBuilder keyBuilder = new StringBuilder();
-		keyBuilder.append(super.getETag(ac));
 		keyBuilder.append(getLastEditedTimestamp());
-		return ETag.hash(keyBuilder);
+		return keyBuilder.toString();
 	}
 
 	@Override
