@@ -2001,8 +2001,8 @@ public class NodeImpl extends AbstractGenericFieldContainerVertex<NodeResponse, 
 	 * </ul>
 	 */
 	@Override
-	public String getETag(InternalActionContext ac) {
-		String superkey = super.getETag(ac);
+	public String getSubETag(InternalActionContext ac) {
+		StringBuilder keyBuilder = new StringBuilder();
 
 		// Parameters
 		Branch branch = ac.getBranch(getProject());
@@ -2012,9 +2012,6 @@ public class NodeImpl extends AbstractGenericFieldContainerVertex<NodeResponse, 
 		Node parentNode = getParentNode(branch.getUuid());
 		NodeGraphFieldContainer container = findVersion(ac.getNodeParameters().getLanguageList(options()), branch.getUuid(), ac.getVersioningParameters()
 			.getVersion());
-
-		StringBuilder keyBuilder = new StringBuilder();
-		keyBuilder.append(superkey);
 
 		/**
 		 * branch uuid
@@ -2127,30 +2124,10 @@ public class NodeImpl extends AbstractGenericFieldContainerVertex<NodeResponse, 
 
 		}
 
-		/**
-		 * permissions (&roleUuid query parameter aware)
-		 * 
-		 * Permissions can change and thus must be included in the etag computation in order to invalidate the etag once the permissions change.
-		 */
-		String roleUuid = ac.getRolePermissionParameters().getRoleUuid();
-		if (!isEmpty(roleUuid)) {
-			Role role = mesh().boot().meshRoot().getRoleRoot().loadObjectByUuid(ac, roleUuid, READ_PERM);
-			if (role != null) {
-				Set<GraphPermission> permSet = role.getPermissions(this);
-				Set<String> humanNames = new HashSet<>();
-				for (GraphPermission permission : permSet) {
-					humanNames.add(permission.getRestPerm().getName());
-				}
-				String[] names = humanNames.toArray(new String[humanNames.size()]);
-				keyBuilder.append(Arrays.toString(names));
-			}
-
-		}
-
 		if (log.isDebugEnabled()) {
 			log.debug("Creating etag from key {" + keyBuilder.toString() + "}");
 		}
-		return ETag.hash(keyBuilder.toString());
+		return keyBuilder.toString();
 	}
 
 	@Override
