@@ -7,6 +7,8 @@ import static org.junit.Assert.assertEquals;
 import org.junit.Test;
 
 import com.gentics.madl.tx.Tx;
+import com.gentics.mesh.parameter.client.RolePermissionParametersImpl;
+import com.gentics.mesh.parameter.impl.GenericParametersImpl;
 import com.gentics.mesh.parameter.impl.NodeParametersImpl;
 import com.gentics.mesh.parameter.impl.PagingParametersImpl;
 import com.gentics.mesh.test.context.AbstractMeshTest;
@@ -32,14 +34,25 @@ public class ProjectEndpointETagTest extends AbstractMeshTest {
 			assertEquals(etag, actualETag);
 
 			// Check whether 304 is returned for correct etag
-			assertEquals(etag, callETag(() -> client().findProjectByUuid(project().getUuid()), etag, true, 304));
+			assertEquals(etag, callETag(() -> client().findProjectByUuid(projectUuid()), etag, true, 304));
 
 			// The project has no node reference and thus expanding will not affect the etag
-			assertEquals(etag, callETag(() -> client().findProjectByUuid(project().getUuid()), etag, true, 304));
+			assertEquals(etag, callETag(() -> client().findProjectByUuid(projectUuid()), etag, true, 304));
 
 			// Assert that adding bogus query parameters will not affect the etag
-			callETag(() -> client().findProjectByUuid(project().getUuid(), new NodeParametersImpl().setExpandAll(false)), etag, true, 304);
-			callETag(() -> client().findProjectByUuid(project().getUuid(), new NodeParametersImpl().setExpandAll(true)), etag, true, 304);
+			callETag(() -> client().findProjectByUuid(projectUuid(), new NodeParametersImpl().setExpandAll(false)), etag, true, 304);
+			callETag(() -> client().findProjectByUuid(projectUuid(), new NodeParametersImpl().setExpandAll(true)), etag, true, 304);
+
+			// Assert that fields parameter affects etag
+			etag = callETag(() -> client().findProjectByUuid(projectUuid(), new GenericParametersImpl().setFields("uuid")));
+			callETag(() -> client().findProjectByUuid(projectUuid()), etag, true, 200);
+			callETag(() -> client().findProjectByUuid(projectUuid(), new GenericParametersImpl().setFields("uuid")), etag, true, 304);
+
+			// Assert roles parameters
+			etag = callETag(() -> client().findProjectByUuid(projectUuid(), new RolePermissionParametersImpl().setRoleUuid(roleUuid())));
+			callETag(() -> client().findProjectByUuid(projectUuid()), etag, true, 200);
+			callETag(() -> client().findProjectByUuid(projectUuid(), new RolePermissionParametersImpl().setRoleUuid(roleUuid())), etag, true, 304);
+
 		}
 
 	}
